// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedBanner has a topic subscribe toggle button 1`] = `
<View>
  <Image
    source={undefined}
  />
  <div
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  >
    MockLinearGradient
  </div>
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
      >
        Earth
      </Text>
    </View>
    <View>
      <View
        accessibilityComponentType={undefined}
        accessibilityLabel={undefined}
        accessibilityTraits={undefined}
        accessible={true}
        collapsable={undefined}
        hitSlop={undefined}
        isTVSelectable={true}
        nativeID={undefined}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View>
          <View>
            <Icon
              color={undefined}
              name="Star"
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
            >
              Subscribe
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`FeedBanner renders correctly with a community and user 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "community.png",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
      />
    </View>
  </View>
  <PostPrompt
    currentUser={
      Object {
        "avatarUrl": "user.png",
        "firstName": [Function],
        "id": "2",
        "name": "John Wayne",
      }
    }
    newPost={[Function]}
  />
  <View />
</View>
`;

exports[`FeedBanner renders correctly with a network and user 1`] = `
<View>
  <Image
    source={
      Object {
        "uri": "network.png",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
      />
    </View>
  </View>
  <PostPrompt
    currentUser={
      Object {
        "avatarUrl": "user.png",
        "firstName": [Function],
        "id": "2",
        "name": "John Wayne",
      }
    }
    newPost={[Function]}
  />
  <View />
</View>
`;

exports[`FeedBanner renders correctly with all=true, and no community or user 1`] = `
<View>
  <Image
    source={
      Object {
        "testUri": "../../../src/assets/all-communities-banner.png",
      }
    }
  />
  <MockLinearGradient
    colors={
      Array [
        "rgba(0, 0, 0, 0)",
        "rgba(0, 0, 0, 0.1)",
        "rgba(0, 0, 0, 0.3)",
        "rgba(0, 0, 0, 0.6)",
      ]
    }
  />
  <View>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        numberOfLines={3}
      >
        All Communities
      </Text>
    </View>
  </View>
</View>
`;

exports[`PostPrompt renders correctly with a user 1`] = `
<View>
  <TouchableOpacity
    activeOpacity={0.2}
    onPress={[Function]}
  >
    <Avatar
      avatarUrl="user.png"
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
    >
      John
      , what's on your mind?
    </Text>
  </TouchableOpacity>
</View>
`;
